# a290dash

./: Containerfile  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: container-publish.yml
assets/: layout.css
dash_spike/: __init__.py  cli.py
