[tool.poetry]
name = "dash-spike"
version = "0.1.0"
description = "Spike for external dash app of Molecular Neurobiology DKFZ"
authors = ["Jooa <git@jooa.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5"
dash = "^2.8"
anndata = "^0.8.0"

[tool.poetry.scripts]
a290dash = "dash_spike.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
